--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          repository: "muralivijay/kernel_xiaomi_sm6225"
-          ref: "main"
+          ref: "13.0"
 
       - name: Install Dependencies
         run: sudo apt-get install -y elfutils libarchive-tools
@@ -24,10 +23,7 @@ jobs:
         run: git clone --depth 1 https://gitlab.com/ThankYouMario/android_prebuilts_clang-standalone.git clang-r450784e
 
       - name: Setup KernelSU
-        run: |
-          git config user.email 81718060+Kajal4414@users.noreply.github.com && git config user.name Kajal4414
-          git fetch https://github.com/Kajal4414/android_kernel_xiaomi_spes && git cherry-pick 00af258
-          rm -rf KernelSU && curl -LSs "https://raw.githubusercontent.com/Kajal4414/KernelSU/main/kernel/setup.sh" | bash -
+        run: rm -rf KernelSU && curl -LSs "https://raw.githubusercontent.com/Kajal4414/KernelSU/main/kernel/setup.sh" | bash -
 
       - name: Compile Kernel
         run: |
