--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          # repository: "Kajal4414/android_kernel_xiaomi_sm6225"//
+          # repository: "Kajal4414/android_kernel_xiaomi_sm6225"//buff
           ref: "13.0"
 
       - name: Install Dependencies
